syntax = "proto3";

package publishen.publish.service;


service publishService{
    rpc CreatePublish(Publish) returns (Response){}
    rpc ListOfPublishes(Request) returns (Response){}
    rpc GetPublish(Publish) returns (Response){}
    rpc UpdatePublish(Publish) returns (Response){}
    rpc DeletePublish(Publish) returns (Response){}
}

message Request{}

message Publish{
    string ID = 1;
    string title=2;
    string description=3;
    string banner=4;
    repeated string images=5;
    Location location=6;
    repeated Attribute attributes=7;
    string shareGroupID=9;
    string userID=10;
    repeated string tags=11;
    string Key =12;
    enum shareState {
        PUBLIC=0;
        PRIVATE=1;
    };
    enum class {
        I_WANT=0;
        I_HAVE=1;
    };
    enum group {
        ARTICLE=0;
        PRODUCT=1;
        GALLERY=2;
        VIDEO=3;
        JOB=4;
        PROJECT=5;
    };
}

message Location {
    float latitude=1;
    float longitude=2;
}

message Attribute{
  string key=1;
  string value=2;
}


message Response{
    string errorMessage=1;
    bool success=2;
    string documentID=3;
    Publish publish=4;
    repeated Publish publishes=5;
}